styles/jquery.ui.css
/***************************/
/* jQuery UI plugin styles */
/***************************/
.ui-widget-header .ui-icon {background-image: url("../images/jquery-ui-icons.png");}
.ui-icon {width: 16px;height: 16px;}
.ui-icon-circle-triangle-w {background-position: -80px -192px;}
.ui-icon-circle-triangle-e {background-position: -48px -192px;}
.ui-icon-closethick {display: none !important;}
/* jquery UI resizable */
.ui-wrapper .ui-resizable { position: relative !important;}
.ui-wrapper .ui-resizable-handle { position: absolute !important;font-size: 0.1px !important;z-index: 0 !important; display: block !important; }
.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none !important; }
.ui-wrapper .ui-resizable-se { cursor: se-resize !important; width: 12px !important; height: 12px !important; right: 18px !important; bottom: 22px !important;  }
.ui-wrapper .ui-icon-gripsmall-diagonal-se { width: 12px; height: 12px; background: url(../images/resize.png) no-repeat; }
/* jquery UI autocomplete */
.ui-autocomplete { position: absolute; cursor: default; background: #F9F9F9; border: 1px solid #DFDFDF; }
.ui-autocomplete .ui-menu-item {padding:5px;}
.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {background-color: #21759B; background-image: none; padding: 0px; margin: 0px; border-radius: 0; color: #fff;}
.ui-autocomplete .ui-menu-item a:hover {color:#fff;}
/* jQuery UI menu */
.ui-menu {list-style:none; padding: 2px; margin: 0; display:block; float: left;}
.ui-menu .ui-menu-item {margin:0; padding: 0; zoom: 1; float: left; clear: left; width: 100%;}
.ui-menu .ui-menu-item a {text-decoration:none; display:block; padding:.2em .4em; line-height:1.5; zoom:1;}
/* jQuery UI datepicker */
.ui-datepicker { background-color: #fff; color: #000; border: 2px solid rgb(223,223,223); width: 22em; padding: .2em .2em 0; display: none; -webkit-border-radius: 5px; -khtml-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-family: Arial,Helvetica,Sans-serif; font-size: 90%;}
.ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
.ui-datepicker .ui-datepicker-prev { left:8px; font-weight: bold; }
.ui-datepicker .ui-datepicker-next { right:8px; font-weight: bold; }
.ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { display: block; position: absolute; left: 50%; margin-left: -8px; top: 50%; margin-top: -4px; cursor: pointer; }
.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
.ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
.ui-datepicker select.ui-datepicker-month-year {width: 100%;}
.ui-datepicker table {width: 100%; font-size: .9em; border-collapse: collapse; margin:0 0 .4em; }
.ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0; background-color: #DFDFDF; }
.ui-datepicker td { border: 1px solid #DFDFDF; padding: 1px; }
.ui-datepicker td.ui-datepicker-week-col { background-color: #DFDFDF; text-align: center; }
.ui-datepicker td span, .ui-datepicker td a { display: block; padding: .2em; text-align: right; text-decoration: none; font-weight: bold; }
.ui-datepicker td a:hover, .ui-datepicker a.ui-state-active{ background-color: #21759B; color: #fff; }
a.ui-state-highlight{background-color:#FFFF66; }
.ui-datepicker .ui-datepicker-buttonpane { background-image: none; margin: .7em 0 0 0; padding:0 .2em; border-left: 0; border-right: 0; border-bottom: 0; }
.ui-datepicker .ui-datepicker-buttonpane button { float: right; margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }
/* RTL support */
.ui-datepicker-rtl { direction: rtl; }
.ui-datepicker-rtl .ui-datepicker-prev { right: 2px; left: auto; }
.ui-datepicker-rtl .ui-datepicker-next { left: 2px; right: auto; }
.ui-datepicker-rtl .ui-datepicker-prev:hover { right: 1px; left: auto; }
.ui-datepicker-rtl .ui-datepicker-next:hover { left: 1px; right: auto; }
.ui-datepicker-rtl .ui-datepicker-buttonpane { clear:right; }
.ui-datepicker-rtl .ui-datepicker-buttonpane button { float: left; }
.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current { float:right; }
.ui-datepicker-rtl .ui-datepicker-group { float:right; }
.ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header { border-right-width:0; border-left-width:1px; }
.ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header { border-right-width:0; border-left-width:1px; }

